--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Shyamalsian.github.io/app",
+  "homepage": "https://Shyamalsian.github.io/registrationFrontend",
   "name": "registration",
   "version": "0.1.0",
   "private": true,
